--- a/PredictiveMaintenance/Predictive-mainstenance-binary.ipynb
+++ b/PredictiveMaintenance/Predictive-mainstenance-binary.ipynb
@@ -1696,6 +1696,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e686b3a",
+   "metadata": {},
+   "source": [
+    "##### Explaining LSTM inputs\n",
+    "Every layer of LSTM expects three-dimensional input matrix which also sometime referred as matrix of two dimensional sequences where one sequence is a 2D matrix of all features data or slice of the data within a given time window (sequence length). So, the three dimensions represents\n",
+    "\n",
+    "samples: One sequence is one sample.\n",
+    "Time steps: Defined time window also called sequence length indicating how far in past the network should keep the memory.\n",
+    "Features\n",
+    "Our sequences will be overlapping reflecting sliding time window with increment 1 over data. Sliding windows approach will introduced highly dependent sequences that may introduce overfit. Increasing increment may reduce the the dependency but does not assure indenpedence. Sliding windows approach however is good in situations where data is not rich. We will address the overfitting issue by introducing dropout layers after all layers with return_sequences = True."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "be9ce74c",
    "metadata": {},
    "source": [
